--- a/css/media.css
+++ b/css/media.css
@@ -34,8 +34,6 @@
          position: fixed;
          padding-top: 0;
          background-color: #ffffff;
-         -webkit-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.23);
-         box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.23);
      }
      .navbar-wrap-overlay.active {
          height: 100%;
